--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./build.css" rel="stylesheet">
+  <link href="./output.css" rel="stylesheet">
   <TItle>SNAKE GAME!</TItle>
 </head>
 <body>
@@ -21,10 +21,10 @@
         <canvas id="canvas" width="300" height="300"></canvas>
     </div>
     <div class="w-72 grid gap-3 grid-cols-3 grid-rows-3 mx-auto">
-        <div id="UP" class="col-start-2 row-start-1 text-center text-xl p-4 font-black bg-red-500">UP</div>
-        <div id="LEFT" class="col-start-1 row-start-2 text-center text-xl p-4 font-black  bg-red-500">LEFT</div>
-        <div id="RIGHT" class="col-start-3 row-start-2 text-center text-xl p-4 font-black bg-red-500">RIGHT</div>
-        <div id="DOWN" class="col-start-2 row-start-3 text-center text-xl p-4 font-black bg-red-500">DOWN</div>
+        <div id="UP" class="select-none col-start-2 row-start-1 text-center text-xl p-4 font-black bg-red-500">UP</div>
+        <div id="LEFT" class="select-none col-start-1 row-start-2 text-center text-xl p-4 font-black  bg-red-500">LEFT</div>
+        <div id="RIGHT" class="select-none col-start-3 row-start-2 text-center text-xl p-4 font-black bg-red-500">RIGHT</div>
+        <div id="DOWN" class="select-none col-start-2 row-start-3 text-center text-xl p-4 font-black bg-red-500">DOWN</div>
     </div>
 
 
