--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </button>
     </div>
     <div id="gameBody" class="flex text-center flex-col items-center mx-auto">
-        <div id="score" class="text-9xl">0</div>
+        <div id="score" class="select-none text-9xl">0</div>
         <canvas id="canvas" width="300" height="300"></canvas>
     </div>
     <div class="w-72 grid gap-3 grid-cols-3 grid-rows-3 mx-auto">
