--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </button>
     </div>
     <div id="gameBody" class="flex text-center flex-col items-center mx-auto">
-        <div id="score" class="text-9xl">0</div>
+        <div id="score" class="select-none text-9xl">0</div>
         <canvas id="canvas" width="300" height="300"></canvas>
     </div>
-    <div class="w-72 grid gap-3 grid-cols-3 grid-rows-3 mx-auto">
+    <div class="w-72 my-6 grid gap-3 grid-cols-3 grid-rows-3 mx-auto">
         <div id="UP" class="select-none col-start-2 row-start-1 text-center text-xl p-4 font-black bg-red-500">UP</div>
         <div id="LEFT" class="select-none col-start-1 row-start-2 text-center text-xl p-4 font-black  bg-red-500">LEFT</div>
         <div id="RIGHT" class="select-none col-start-3 row-start-2 text-center text-xl p-4 font-black bg-red-500">RIGHT</div>
